round corner fixed and hareline gap between two cards fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,13 +36,15 @@ body {
   margin: auto;
   max-width: 600px;
   margin: 50px auto;
+  background: white;
+  border-radius: 5px 5px 5px 5px;
 }
 
 .card-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px 0 0 5px;
 }
 
 .card-paragraph-links {
@@ -51,7 +53,7 @@ body {
   grid-template-rows: auto auto;
   gap: 20px;
   background: white;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 5px 5px 0;
 }
 
 .card-paragraph {
@@ -185,12 +187,17 @@ body {
   }
 
   .card-image img {
-    border-radius: 5px 0 0 5px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px 5px 0 0;
+
   }
 
   .card-paragraph-links {
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
+    border-radius: 0 0 5px 5px;
   }
 
   .card-footer {
